// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DbServiceSegmentedLabel should match snapshot 1`] = `
<div>
  <div
    class="db-service-segmented-label css-1jeaof"
  >
    <span
      class="db-service-segmented-label-text"
    >
      mysql-1
    </span>
    <span
      class="db-service-segmented-label-icon"
    />
  </div>
</div>
`;

exports[`test DbServiceSegmentedLabel should match snapshot 2`] = `
<div>
  <div
    class="db-service-segmented-label css-1jeaof"
  >
    <span
      class="db-service-segmented-label-text"
    >
      mysql-1
    </span>
    <span
      class="db-service-segmented-label-icon"
    >
      <svg
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
          fill="#F66074"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`test DbServiceSegmentedLabel should match snapshot 3`] = `
<div>
  <div
    class="db-service-segmented-label css-1jeaof"
  >
    <span
      class="db-service-segmented-label-text"
    >
      mysql-1
    </span>
    <span
      class="db-service-segmented-label-icon"
    >
      <svg
        height="14"
        viewBox="0 0 18 19"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
          fill="#C3C6CD"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`test DbServiceSegmentedLabel should match snapshot 4`] = `
<div>
  <div
    class="db-service-segmented-label css-1jeaof"
  >
    <span
      class="db-service-segmented-label-text"
    >
      mysql-1
    </span>
    <span
      class="db-service-segmented-label-icon"
    >
      <svg
        height="14"
        viewBox="0 0 18 19"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
          fill="#6094FC"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`test DbServiceSegmentedLabel should match snapshot 5`] = `
<div>
  <div
    class="db-service-segmented-label css-1jeaof"
  >
    <span
      class="db-service-segmented-label-text"
    >
      mysql-1
    </span>
    <span
      class="db-service-segmented-label-icon"
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
          fill="#EBAD1C"
        />
      </svg>
    </span>
  </div>
</div>
`;
